@@ -115,7 +115,8 @@
 - updated: `CORS()` tries to join multiple same preferences to one
 - updated: `U.keywords()` for Chinese/Japan characters
 - updated: `@{import()}` by adding `manifest` value linked to `/manifest.json`
-- updated: internal crypto algorithm to `aes-128-ofb`
+- updated: improved crypto algorithm
+- updated: `F.use()` supports `function` instead of `middleware` name
 
 - fixed: mail attachments
 - fixed: mail `message.manually()`
